--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,3 +1,28 @@
 .navbar {
     margin-bottom: 20px;
 }
+
+.content {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .content h1 {
+    font-size: 28px;
+  }
+  
+  .content p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .content ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .content ul li {
+    margin-bottom: 5px;
+  }
