--- a/src/styles/Slider.module.css
+++ b/src/styles/Slider.module.css
@@ -1,10 +1,10 @@
 .carousel-container .carousel-item {
-    height: 400px; /* Adjust this value to set the desired height */
+    height: 50%; /* Adjust this value to set the desired height */
   }
   
   .carousel-container .d-block {
-    max-width: 20%;
-    max-height: 20%;
+    max-width: 100%;
+    max-height: 400px;
     width: auto;
     height: auto;
     display: block;
@@ -12,7 +12,7 @@
   }
   
   .carousel-container {
-    max-width: 20%; /* Adjust this value to set the desired width */
+    max-width: 200px; /* Adjust this value to set the desired width */
     margin: 0 auto;
   }
   
