--- a/src/styles/LoginSignUpPage.module.css
+++ b/src/styles/LoginSignUpPage.module.css
@@ -1,6 +1,6 @@
 .form-container {
     width: 100%;
-    max-width: 330px;
+    max-width: 300px;
     padding: 15px;
     margin: auto;
 }
@@ -11,6 +11,8 @@
 
 .btn-block {
     margin-top: 15px;
+    width: 100%;
+    
 }
 
 .error-message {
